--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="de">
   {% include head.html %}
   <body>
-    <div class="container">
+    <div class="container-fluid">
       {% include header.html %}
           {{ content }}
         <!-- {% include footer.html %} -->
