--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,7 @@ html {
 }
 
 .home {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,5 +29,26 @@ html {
   h2 {
     font-size: 1.5rem;
     color: #f64b4b;
+  }
+
+
+  @include media-breakpoint-down(sm) {
+    h2 {
+      font-size: 1.4rem;
+      color: #f64b4b;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    h1, h2 {
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 1rem;
+    }
+
+    .logo {
+      margin-right: unset;
+    }
   }
 }
