--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,15 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="{{ "{{site.url }}/css/main.css" }}">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="{{ '/assets/images/favicon.png' | prepend: site.url }}" >
+  <meta property="og:locale" content="en_DE">
+  <meta property="og:type" content="website">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:url" content="https://www.milkshakeapps.com">
+  <meta property="og:site_name" content="{{ site.title }}">
+  <meta property="og:image" itemprop="image" content="{{ site.url }}/assets/images/Logo.png">
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
 </head>
